the best ican do with coo
