# routes/api.php
@@ -26,6 +26,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::middleware('auth:sanctum')->post('/jobs', [JobController::class, 'store']);
     Route::put('/jobs/{job}', [JobController::class, 'update']);
     Route::delete('/jobs/{job}', [JobController::class, 'destroy']);
+    Route::delete('employer/jobs/{id}', [JobController::class, 'employerDeleteJob']);
+    Route::get('user/jobs', [JobController::class, 'userViewJobs']);
     Route::delete('/applications/{id}', [ApplicationController::class,'destroy']);
     Route::post('/applications',[ApplicationController::class,'store']);
     Route::get('employer/applications', [ApplicationController::class, 'employerApplications']);
